# signalforge

./: .gitignore  API_DOCUMENTATION.md  API_INTEGRATION.md  CMakeLists.txt  CMakePresets.json  PLUGINS.md  PROJECT_DOCUMENTATION.md  README.md  SignalForge_User_Manual.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
Core/AIEngine/: AIEngine.cpp  AIEngine.h  AudioAnalyzer.cpp  CMakeLists.txt  SmartMixer.cpp
Core/API/: APIManager.cpp  APIManager.h  Base44Client.cpp  Base44Client.h
Core/AudioEngine/: AudioEngine.cpp  AudioEngine.h  AudioRecorder.cpp  AudioRecorder.h  DiskWriter.cpp  DiskWriter.h  EffectsProcessor.cpp  EffectsProcessor.h  LockFreeAudioFIFO.h  Meter.cpp  Meter.h  MidiManager.cpp  MidiManager.h  MultiTrackMixer.cpp  MultiTrackMixer.h  PluginHost.cpp  PluginHost.h  ProjectManager.cpp  ProjectManager.h  Track.cpp  Track.h
Core/AudioEngine/Recording/: AudioRecorder.cpp  AudioRecorder.h
Core/Auth/: ProtocolHandler.cpp  ProtocolHandler.h  TokenManager.cpp  TokenManager.h
Resources/: Info.plist.in
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent_old.cpp  Version.h
Source/GUI/: DAWComponents.cpp  DAWComponents.h  EffectsPanel.cpp  EffectsPanel.h  MenuBarComponent.cpp  MenuBarComponent.h  MidiSettingsPanel.cpp  MidiSettingsPanel.h  MixerPanel.cpp  MixerPanel.h  PluginBrowser.cpp  PluginBrowser.h  SignalForgeDAW.cpp  SignalForgeDAW.h  SimpleDAW.cpp  SimpleDAW.h  TrackView.cpp  TrackView.h  TransportBarComponent.cpp  TransportBarComponent.h  TransportControls.cpp  TransportControls.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Utils/: Logger.cpp  Logger.h  SignalForgeIcon.cpp  SignalForgeIcon.h
WebInterface/: package-lock.json  package.json
WebInterface/src/api/: base44Client.js  entities.js  functions.js
WebInterface/src/components/collaboration/: CollaborativeControls.jsx  PresenceIndicator.jsx  ProjectChat.jsx
WebInterface/src/components/mastering/: MasteringAssistant.jsx  MasteringResults.jsx  PresetManager.jsx  RealTimeMasteringVisualizer.jsx  StemMasteringBatch.jsx  StemMasteringWorkflow.jsx
WebInterface/src/components/mixing/: ABComparison.jsx  AIAssistant.jsx  AnalysisResults.jsx  LiveFeedback.jsx  MixerView.jsx  RealTimeAnalyzer.jsx  StemResults.jsx  StemSeparator.jsx
WebInterface/src/pages/: APIDocumentation.jsx  Admin.jsx  Analytics.jsx  Dashboard.jsx  Downloads.jsx  FileManagement.jsx  Home.jsx  IconDownload.jsx  KnowledgeBase.jsx  Layout.jsx  Projects.jsx  index.jsx
scripts/: build.sh  configure.sh  install-plugins.sh  run.sh  setup-macos.sh
tests/: LockFreeAudioFIFOTest.cpp
